--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,15 +40,18 @@ jobs:
           event = json.load(f)
         print(event)
         labels = event['pull_request']['labels']
-        print(labels)
-        for label in labels:
-          if label['name'].startswith('pipeline-'):
-            print("Labeled", label)
-            with open(os.environ['GITHUB_OUTPUT'], 'w') as f:
-              print("pipeline-label=" + label['name'], file=f)
-            exit(0)
-        print("::error title=Missing pipeline label::PRs for character additions must have a pipeline label.")
-        exit(1)
+        pipeline_labels = [label for label in labels if label['name'].startswith('pipeline-')]
+        if not pipeline_labels:
+          print("::error title=Missing pipeline label::PRs for character additions must have a pipeline label.")
+          exit(1)
+        if len(pipeline_labels) > 1
+          print("::error title=Multiple pipeline labels::Only one pipeline-* label must be applied.")
+          exit(1)
+        label = pipeline_labels[0]:
+        print("Labeled", label)
+        with open(os.environ['GITHUB_OUTPUT'], 'w') as f:
+          print("pipeline-label=" + label['name'], file=f)
+        exit(0)
         EOF
   draft-unless-approved:
     needs: labels-for-repertoire-changes
@@ -56,7 +59,8 @@ jobs:
     name: Draft unless approved
     runs-on: ubuntu-latest
     steps:
-    - env:
+    - name: Check draft status
+      env:
         PIPELINE_LABEL: ${{needs.labels-for-repertoire-changes.outputs.pipeline-label}}
       run: |
         python3 <<EOF
