--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,7 +44,7 @@ jobs:
         if not pipeline_labels:
           print("::error title=Missing pipeline label::PRs for character additions must have a pipeline label.")
           exit(1)
-        if len(pipeline_labels) > 1
+        if len(pipeline_labels) > 1:
           print("::error title=Multiple pipeline labels::Only one pipeline-* label must be applied.")
           exit(1)
         label = pipeline_labels[0]:
